force-app/main/default/objects/Alumni_Event_Registrations__c/Alumni_Event_Registrations__c.object-meta.xml
<CustomObject>
    <label>Alumni Event Registrations</label>
    <nameField>
        <displayFormat>AER -{0000}</displayFormat>
        <label>Alumni Event Registrations Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alumni Event Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>