force-app/main/default/objects/Alumni_Event_Registrations__c/fields/Alumni_Activities_Event__c.field-meta.xml
<CustomField>
    <fullName>Alumni_Activities_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alumni Activities - Event</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Alumni_Activities__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Events</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Alumni_Activities__c</referenceTo>
    <relationshipLabel>Alumni Event Registrations</relationshipLabel>
    <relationshipName>Alumni_Event_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>