force-app/main/default/objects/Alumni_Event_Registrations__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Alumni</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Alumni Event Registrations</relationshipLabel>
    <relationshipName>Alumni_Event_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>