force-app/main/default/objects/Alumni_Event_Registrations__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <formula>Alumni_Activities_Event__r.Event_Name__c</formula>
    <label>Event</label>
    <type>Text</type>
</CustomField>