force-app/main/default/objects/Alumni_Event_Registrations__c/fields/Event_Attended__c.field-meta.xml
<CustomField>
    <fullName>Event_Attended__c</fullName>
    <label>Alumni Attended?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>