force-app/main/default/objects/Alumni_Event_Registrations__c/fields/Registration_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date_Time__c</fullName>
    <label>Registration Date / Time</label>
    <type>DateTime</type>
</CustomField>