force-app/main/default/objects/Alumni_Event_Registrations__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event__c</columns>
    <columns>Contact__c</columns>
    <columns>Registration_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Registration_Date_Time__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All</label>
</ListView>