force-app/main/default/objects/Alumni_Event_Registrations__c/listViews/Alumni_Event_Registration.listView-meta.xml
<ListView>
    <fullName>Alumni_Event_Registration</fullName>
    <columns>NAME</columns>
    <columns>Event__c</columns>
    <columns>Registration_Date_Time__c</columns>
    <columns>Event_Attended__c</columns>
    <filterScope>Mine</filterScope>
    <label>Alumni Event Registration</label>
    <sharedTo>
        <allCustomerPortalUsers></allCustomerPortalUsers>
    </sharedTo>
</ListView>